# ds-machine-analysis

./: .gitignore  CLAUDE.md  README.md  __init__.py  main.py  project_findings_log.md  pyproject.toml  pytest.ini  requirements.txt
api/: README.md  __init__.py  main.py  state.py
api/middleware/: __init__.py  auth.py
api/routers/: __init__.py  health.py  license.py  machines.py  ws.py  (+1 more)
commissioning/: README.md
core/: __init__.py  anomaly_detector.py  config_model.py  cycle_processor.py  data_bus.py  data_model.py  event_logger.py  machine_registry.py  mqtt_publisher.py  oee_processor.py  pack_loader.py  plc_codegen.py  tier_profile.py
docs/: DS-P005-SYS-001_Roadmap.md  DS-P005-SYS-002_Master_Plan.md  DS-P005-SYS-003_Reliability_Availability_Scalability.md  DS-P005-SYS-004_Quick_Reference.md  DS-P005-UI-001_Design_System.md  DS-P005-UI-002_Information_Architecture.md
packs/: README.md
plc/: __init__.py  base_adapter.py  modbus_adapter.py  opcua_adapter.py
plc_templates/: TEMPLATE_STANDARD.md
resources/: README.md
scripts/: README.md  generate_plc_template.py
storage/: __init__.py  base_storage.py  postgres_storage.py  sqlite_storage.py
tests/: conftest.py  test_anomaly_detector.py  test_api.py  test_config_loader.py  test_cycle_anomaly.py  test_cycle_processor.py  test_data_bus.py  test_data_model.py  test_event_logger.py  test_jwt_auth.py  test_modbus_adapter.py  test_mqtt_publisher.py  test_oee_processor.py  test_pack_loader.py  test_pillars_api.py  test_plc_codegen.py  test_replay_mode.py  test_sqlite_storage.py  test_tier_profile.py  test_ui_api_client.py
ui/: __init__.py  api_client.py  main_window.py  theme.py  ws_client.py
utils/: __init__.py  config_loader.py  logger.py
web/: README.md
(+45 files in other folders)
