[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-machine-analyzer"
version = "0.1.0"
description = "DS Machine Analyzer Platform — Industrial machine cycle and OEE analytics"
authors = [
    {name = "DS Engineering Team", email = "ha@ds-platform.io"}
]
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    # Core data & async
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Protocol communication
    "asyncua>=0.9.0",
    "pymodbus>=3.5.0",
    "pycomm3>=0.32.0",
    # Database
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.19.0",
    # Configuration
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    # API gateway (FastAPI + WebSocket — API-first architecture)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.0",
    # UI (PyQt6 desktop — one of several API consumers)
    "PyQt6>=6.5.0",
    "qtawesome>=1.4.0",
    "pyqt-toast-notification>=1.3.0",
    # Utilities
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "C", "Q"]
exclude = ["build", ".venv", "data", "logs"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
